# cpp-2018

asm/: mul.asm  sub.asm
big_integer/: big_integer.cpp  big_integer.h
big_integer 2.0/: CMakeLists.txt  big_integer.cpp  big_integer.h
canonical-huffman/buffered_reader/: buffered_reader.cpp  buffered_reader.h
canonical-huffman/buffered_writer/: buffered_writer.cpp  buffered_writer.h
canonical-huffman/huffman/: CMakeLists.txt  huffman.cpp  huffman_test.cpp  main.cpp
fixed_vector/: fixed_vector.h
huffman/compressor/: compressor.cpp  compressor.h  compressor.pro  compressor_global.h
huffman/counter/: counter.cpp  counter.h  counter.pro
huffman/decompressor/: decompressor.cpp  decompressor.h  decompressor.pro
huffman/freader/: freader.cpp  freader.h  freader.pro
huffman/fwriter/: fwriter.cpp  fwriter.h  fwriter.pro
huffman/huffman_testing/: CMakeLists.txt  huffman_test.cpp
huffman/huffman_testing/precompressed/: ebook.fb2  human_text.txt
huffman/main/: CMakeLists.txt  main.cpp
huffman/node/: node.h  node.pro
optimized_vector/: optimized_vector.cpp  optimized_vector.h
practice/: Practice1.cpp
